# cicd-poetry-checkuser

./: .travis.yaml  pyproject.toml
cicd_poetry_checkuser/: checkuser.py
