[tool.poetry]
name = "cicd_poetry_checkuser"
version = "0.1.0"
description = ""
authors = ["Raphael Mota <raphaelmota.ti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
